--- a/src/app/containers/Auth/style.css
+++ b/src/app/containers/Auth/style.css
@@ -23,7 +23,7 @@
   position: absolute;
   width: 250px;
   height: 230px;
-  background: url(/images/logo.jpg) no-repeat;
+  background: url(/admin/images/logo.jpg) no-repeat;
   background-size: 100% 100%;
   margin: auto;
   top: 100px;
