--- a/src/app/containers/Modules/Home/index.css
+++ b/src/app/containers/Modules/Home/index.css
@@ -1,7 +1,7 @@
 .home-logo {
   width: 400px;
   height: 350px;
-  background: url(/images/logo.jpg) no-repeat;
+  background: url(/admin/images/logo.jpg) no-repeat;
   background-size: 100% 100%;
   margin: 150px auto;
 }
